# vscode_cpp_projects

linux/vscode_cpp_projects/05_cmake_vcpkg/: CMakeLists.txt  bsdiff.c
